GNOME Bugzilla – Bug 724364
idle-monitor: avoid XSyncBadAlarm X error
Last modified: 2014-02-14 15:46:34 UTC
If we fail to find the IDLETIME counter, then the alarm variable will be uninitialised. Most code paths are careful to check this before submitting XSync calls, but there is one check missing.
Created attachment 269127 [details] [review] idle-monitor: avoid XSyncBadAlarm X error
Review of attachment 269127 [details] [review]: OK.
Attachment 269127 [details] pushed as ad1e23c - idle-monitor: avoid XSyncBadAlarm X error